Update _Task 1 - GRIP Spark foundation.ipynb

--- a/_Task 1 - GRIP Spark foundation.ipynb
+++ b/_Task 1 - GRIP Spark foundation.ipynb
@@ -5,7 +5,7 @@
    "id": "c1b74e1c",
    "metadata": {},
    "source": [
-    "# The Spark Foundation-Data Science and Analytics Internship\n",
+    "# The Spark Foundation-Data Science and Business Analytics Internship\n",
     "\n",
     "__TASK 1: Predicition using Supervised ML__\n",
     "\n",
